# mechanics

./: .gitignore  CMakeLists.txt  Interaction.py  Node.py  Vector.py  World.py  control_systems.py  drone.py  example_drone_tool_drifting_in_space.py  example_single_stepping.py  game.py  help.py  interaction.py  node.py  snippets.md  stick.py  tags  vector.py  world.py
artefacts/: CMakeCache.txt  ControlChallenge  Makefile  cmake_install.cmake  compile_commands.json
include/: Constraints.hpp  Node.hpp  Target.hpp  Text.hpp  Vector.hpp
sfml/: CMakeLists.txt  Constraints.hpp  ControlSystem.hpp  Node.hpp  Text.hpp  Vector.hpp  main.cpp
sfml/artefacts/: CMakeCache.txt  CodeThing  Makefile  cmake_install.cmake
src/: main.cpp
