cmake_minimum_required(VERSION 3.12)
project(ControlChallenge)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_COMPILER "clang++")
include_directories(include)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(${PROJECT_NAME} sfml-graphics)
