cmake_minimum_required(VERSION 3.12)
project(CodeThing)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_COMPILER "clang++")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
add_executable(CodeThing main.cpp)
target_link_libraries(CodeThing sfml-graphics)
